--- a/Dev/BeekWebsite/web.config
+++ b/Dev/BeekWebsite/web.config
@@ -48,7 +48,11 @@
             of the security authentication mode used by 
             ASP.NET to identify an incoming user. 
         -->
-		<authentication mode="Windows"/>
+		<authentication mode="Forms">
+			<forms
+				name="SqlAuthCookie"
+				timeout="10" />
+		</authentication>
 		<!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
