--- a/Dev/BeekWebsite/web.config
+++ b/Dev/BeekWebsite/web.config
@@ -9,50 +9,32 @@
 -->
 <configuration>
 	<appSettings/>
-	<connectionStrings/>
+	<connectionStrings>
+		<add name="MyLocalSQLServer" connectionString="Data Source=PCBORIS;Initial Catalog=Beek;Integrated Security=SSPI;"/>
+	</connectionStrings>
 	<system.web>
-		<!-- 
-            Set compilation debug="true" to insert debugging 
-            symbols into the compiled page. Because this 
-            affects performance, set this value to true only 
-            during development.
-
-            Visual Basic options:
-            Set strict="true" to disallow all data type conversions 
-            where data loss can occur. 
-            Set explicit="true" to force declaration of all variables.
-        -->
-		<compilation debug="true" strict="false" explicit="true"/>
-		<pages>
-			<namespaces>
-				<clear/>
-				<add namespace="System"/>
-				<add namespace="System.Collections"/>
-				<add namespace="System.Collections.Specialized"/>
-				<add namespace="System.Configuration"/>
-				<add namespace="System.Text"/>
-				<add namespace="System.Text.RegularExpressions"/>
-				<add namespace="System.Web"/>
-				<add namespace="System.Web.Caching"/>
-				<add namespace="System.Web.SessionState"/>
-				<add namespace="System.Web.Security"/>
-				<add namespace="System.Web.Profile"/>
-				<add namespace="System.Web.UI"/>
-				<add namespace="System.Web.UI.WebControls"/>
-				<add namespace="System.Web.UI.WebControls.WebParts"/>
-				<add namespace="System.Web.UI.HtmlControls"/>
-			</namespaces>
-		</pages>
-		<!--
-            The <authentication> section enables configuration 
-            of the security authentication mode used by 
-            ASP.NET to identify an incoming user. 
-        -->
+		<compilation debug="true"/>
 		<authentication mode="Forms">
 			<forms
 				name="SqlAuthCookie"
 				timeout="10" />
 		</authentication>
+		<authorization>
+			<deny users="?" />
+			<allow users="*" />
+		</authorization>
+		<membership defaultProvider="MySqlMembershipProvider" >
+			<providers>
+				<clear/>
+				<add name="MySqlMembershipProvider"
+					 connectionStringName="MyLocalSQLServer"
+					 applicationName="Beek"
+					 minRequiredPasswordLength="8"
+					 minRequiredNonalphanumericCharacters="0"
+					 type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" 					 
+				/>
+			</providers>
+		</membership>
 		<!--
             The <customErrors> section enables configuration 
             of what to do if/when an unhandled error occurs 
