--- a/Dev/BeekWebsite/web.config
+++ b/Dev/BeekWebsite/web.config
@@ -17,7 +17,8 @@
 		<authentication mode="Forms">
 			<forms
 				name="SqlAuthCookie"
-				timeout="10" />
+				timeout="10"
+				loginUrl=".\Default.aspx"/>
 		</authentication>
 		<authorization>
 			<deny users="?" />
@@ -30,7 +31,12 @@
 					 connectionStringName="MyLocalSQLServer"
 					 applicationName="Beek"
 					 minRequiredPasswordLength="8"
+					 enablePasswordRetrieval="false"
+					 enablePasswordReset="true"
+					 requiresQuestionAndAnswer="false"
+					 requiresUniqueEmail="true"
 					 minRequiredNonalphanumericCharacters="0"
+					 passwordFormat="Hashed"
 					 type="System.Web.Security.SqlMembershipProvider, System.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" 					 
 				/>
 			</providers>
