--- a/Dev/BeekWebsite/web.config
+++ b/Dev/BeekWebsite/web.config
@@ -12,6 +12,13 @@
 	<connectionStrings>
 		<add name="MyLocalSQLServer" connectionString="Data Source=PCBORIS;Initial Catalog=Beek;Integrated Security=SSPI;"/>
 	</connectionStrings>
+	<location path="Login.aspx">
+		<system.web>
+			<authorization>
+				<allow users = "*" />				
+			</authorization>
+		</system.web>
+	</location>
 	<system.web>
 		<compilation debug="true"/>
 		<authentication mode="Forms">
@@ -21,8 +28,8 @@
 				loginUrl=".\Default.aspx"/>
 		</authentication>
 		<authorization>
-			<deny users="?" />
-			<allow users="*" />
+			<!--<deny users="?" />-->
+			<allow users="*" />			
 		</authorization>
 		<membership defaultProvider="MySqlMembershipProvider" >
 			<providers>
