--- a/Dev/BeekDataLayer/BeekDataLayer.csproj
+++ b/Dev/BeekDataLayer/BeekDataLayer.csproj
@@ -32,8 +32,17 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Beek.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BeekHelpers\BeekHelpers.csproj">
+      <Project>{ECC817DC-8B68-4F5D-B2C3-B33800E5FBF9}</Project>
+      <Name>BeekHelpers</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Beekl\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
