--- a/Dev/BeekHelpers/BeekHelpers.csproj
+++ b/Dev/BeekHelpers/BeekHelpers.csproj
@@ -33,11 +33,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Genre.cs" />
+    <Compile Include="Beek\Genre.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Beek\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
