--- a/Dev/BeekDataLayer/BeekDataLayer.csproj
+++ b/Dev/BeekDataLayer/BeekDataLayer.csproj
@@ -41,9 +41,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BeekHelpers\Helpers.csproj">
+    <ProjectReference Include="..\BeekHelpers\BeekHelpers.csproj">
       <Project>{ECC817DC-8B68-4F5D-B2C3-B33800E5FBF9}</Project>
-      <Name>Helpers</Name>
+      <Name>BeekHelpers</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
