--- a/Dev/BeekControls/BeekControls.csproj
+++ b/Dev/BeekControls/BeekControls.csproj
@@ -33,7 +33,7 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WebCustomControl1.cs" />
+    <Compile Include="Navigation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
