- Fixed naming of mvc application to correct namespace

--- a/Boris.BeekProject/Boris.BeekProject.Website/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Web.config
@@ -24,8 +24,8 @@
       <add assembly="Boris.NHaml"/>
 		</assemblies>
 		<namespaces>
-			<add namespace="MvcApplication4"/>
-			<add namespace="MvcApplication4.Controllers"/>      
+			<add namespace="Boris.BeekProject.Website"/>
+			<add namespace="Boris.BeekProject.Website.Controllers"/>      
 		</namespaces>
 	</nhaml>
 	<system.web>
