--- a/Boris.BeekProject/Boris.BeekProject.Website/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Web.config
@@ -20,7 +20,7 @@
 		
 	<nhaml autoRecompile="true" templateCompiler="CSharp3" encodeHtml="false" useTabs="false" indentSize="2">
 		<assemblies>
-			<add assembly="MvcApplication4"/>
+			<!--<add assembly="MvcApplication4"/>-->
       <add assembly="Boris.NHaml"/>
 		</assemblies>
 		<namespaces>
