Fixed references to changed Boris.Utils.Mvc library

--- a/Boris.BeekProject/Boris.BeekProject.Website/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Web.config
@@ -21,7 +21,7 @@
 	<nhaml autoRecompile="true" templateCompiler="CSharp3" encodeHtml="false" useTabs="false" indentSize="2">
 		<assemblies>
 			<!--<add assembly="MvcApplication4"/>-->
-      <add assembly="Boris.NHaml"/>
+      <add assembly="Boris.Utils.NHaml"/>
 		</assemblies>
 		<namespaces>
 			<add namespace="Boris.BeekProject.Website"/>
