Some more incorrect project refernces in the config file fixed

--- a/Boris.BeekProject/Boris.BeekProject.Website/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Web.config
@@ -24,8 +24,9 @@
       <add assembly="Boris.Utils.NHaml"/>
 		</assemblies>
 		<namespaces>
-			<add namespace="Boris.BeekProject.Website"/>
-			<add namespace="Boris.BeekProject.Website.Controllers"/>      
+      <add namespace="Boris.Utils.NHaml"/>
+			<!--<add namespace="Boris.BeekProject.Website"/>
+			<add namespace="Boris.BeekProject.Website.Controllers"/>-->      
 		</namespaces>
 	</nhaml>
 	<system.web>
@@ -98,7 +99,6 @@
 				<add namespace="System.Web.Routing"/>
 				<add namespace="System.Linq"/>
 				<add namespace="System.Collections.Generic"/>
-        <add namespace="Boris.NHaml.Helpers"/>
 			</namespaces>
 		</pages>
 		<httpHandlers>
