- the tpl library doesn't allow me to create sticky footer, so it's going - Added needed changes to support xVal with jQuery

--- a/Boris.BeekProject/Boris.BeekProject.Website/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Web.config
@@ -19,12 +19,13 @@
 	<connectionStrings />
 		
 	<nhaml autoRecompile="true" templateCompiler="CSharp3" encodeHtml="false" useTabs="false" indentSize="2">
-		<assemblies>
-			<!--<add assembly="MvcApplication4"/>-->
+		<assemblies>			
       <add assembly="Boris.Utils.NHaml"/>
 		</assemblies>
 		<namespaces>
-      <add namespace="Boris.Utils.NHaml"/>
+      <add namespace="xVal.Html"/>
+      <add namespace="Boris.Utils.NHaml.Helpers"/>
+      
 			<!--<add namespace="Boris.BeekProject.Website"/>
 			<add namespace="Boris.BeekProject.Website.Controllers"/>-->      
 		</namespaces>
