--- a/Boris.BeekProject/Boris.BeekProject.Website/Boris.BeekProject.Website.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Boris.BeekProject.Website.csproj
@@ -84,8 +84,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="content\js\jquery.tpl_layout1.1.4.js" />
     <Content Include="content\js\site.js" />
+    <Content Include="content\js\xVal.jquery.validate.js" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
     <Content Include="content\css\site.css" />
