- Added xVal references in web.config - Default html encoding - fixed outputs of stylesheet helper and css helper to not encode html

--- a/Boris.BeekProject/Boris.BeekProject.Website/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Web.config
@@ -18,14 +18,14 @@
 	<appSettings/>
 	<connectionStrings />
 		
-	<nhaml autoRecompile="true" templateCompiler="CSharp3" encodeHtml="false" useTabs="false" indentSize="2">
+	<nhaml autoRecompile="true" templateCompiler="CSharp3" encodeHtml="true" useTabs="false" indentSize="2">
 		<assemblies>			
       <add assembly="Boris.Utils.NHaml"/>
-		</assemblies>
+      <add assembly="xVal"/>
+    </assemblies>
 		<namespaces>
-      <add namespace="xVal.Html"/>
       <add namespace="Boris.Utils.NHaml.Helpers"/>
-      
+      <add namespace="xVal.Html"/>
 			<!--<add namespace="Boris.BeekProject.Website"/>
 			<add namespace="Boris.BeekProject.Website.Controllers"/>-->      
 		</namespaces>
