--- a/Boris.BeekProject/Boris.BeekProject.Website/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Web.config
@@ -21,11 +21,11 @@
 	<nhaml autoRecompile="true" templateCompiler="CSharp3" encodeHtml="true" useTabs="false" indentSize="2">
 		<assemblies>			
       <add assembly="Boris.Utils.NHaml"/>
-      <add assembly="xVal"/>
+      <!--<add assembly="xVal"/>-->
     </assemblies>
 		<namespaces>
       <add namespace="Boris.Utils.NHaml.Helpers"/>
-      <add namespace="xVal.Html"/>
+      <!--<add namespace="xVal.Html"/>-->
 			<!--<add namespace="Boris.BeekProject.Website"/>
 			<add namespace="Boris.BeekProject.Website.Controllers"/>-->      
 		</namespaces>
