--- a/Boris.BeekProject/Boris.BeekProject.Website/Boris.BeekProject.Website.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Boris.BeekProject.Website.csproj
@@ -94,6 +94,14 @@
       <Project>{55F3B8DE-22BA-4632-BAFD-CB4AB3A210BB}</Project>
       <Name>Boris.Utils.NHaml</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Boris.BeekProject.Guis.Shared\Boris.BeekProject.Guis.Shared.csproj">
+      <Project>{FC249D92-0447-4F58-8C3D-88300058957C}</Project>
+      <Name>Boris.BeekProject.Guis.Shared</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Boris.BeekProject.Model.Db4o\Boris.BeekProject.Model.Db4o.csproj">
+      <Project>{EAFB5F39-1D1B-48AB-B82D-637A383B56D8}</Project>
+      <Name>Boris.BeekProject.Model.Db4o</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Boris.BeekProject.Model\Boris.BeekProject.Model.csproj">
       <Project>{7A10D58A-1F92-462E-B722-034EF25AE2F3}</Project>
       <Name>Boris.BeekProject.Model</Name>
