- Experimenting with Ioc Container

--- a/Boris.BeekProject/Boris.BeekProject.Website/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Web.config
@@ -14,8 +14,11 @@
 		</sectionGroup>
 		<section name="nhaml" type="NHaml.Configuration.NHamlConfigurationSection, NHaml"/>    
 	</configSections>
-  
-	<appSettings/>
+
+  <appSettings>
+    <add key="userRepository.path.db4" value="\App_Data\db4o\userRepository.db4o"/>
+    <add key="beekRepository.path.db4" value="\App_Data\db4o\beekRepository.db4o"/>
+  </appSettings>
 	<connectionStrings />
 		
 	<nhaml autoRecompile="true" templateCompiler="CSharp3" encodeHtml="true" useTabs="false" indentSize="2">
