--- a/Boris.BeekProject/Boris.BeekProject.Website/Boris.BeekProject.Website.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Website/Boris.BeekProject.Website.csproj
@@ -8,8 +8,8 @@
     <ProjectTypeGuids>{F85E285D-A4E0-4152-9332-AB1D724D3325};{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Boris.Callens.BeekProject.Website</RootNamespace>
-    <AssemblyName>Boris.Callens.BeekProject.Website</AssemblyName>
+    <RootNamespace>Boris.BeekProject.Website</RootNamespace>
+    <AssemblyName>Boris.BeekProject.Website</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
   </PropertyGroup>
@@ -34,6 +34,18 @@
     <Reference Include="Microsoft.Web.Mvc, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\dependencies\Microsoft.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="MvcTurbine, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0e426322531bc5b0, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\dependencies\MvcTurbine.dll</HintPath>
+    </Reference>
+    <Reference Include="MvcTurbine.Unity, Version=1.0.0.0, Culture=neutral, PublicKeyToken=0e426322531bc5b0, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\dependencies\MvcTurbine.Unity.dll</HintPath>
+    </Reference>
+    <Reference Include="MvcTurbine.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0e426322531bc5b0, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\dependencies\MvcTurbine.Web.dll</HintPath>
     </Reference>
     <Reference Include="NHaml, Version=1.5.0.2, Culture=neutral, PublicKeyToken=d603208bac452365, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -65,7 +77,10 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="ioc\BeekRepositoryRegistration.cs" />
+    <Compile Include="ioc\UserRepositoryRegistration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ioc\DefaultRoutRegistration.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="content\js\jquery.timer.idle.min.js" />
@@ -81,6 +96,7 @@
     <Content Include="views\Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App_Data\db4o\userRepository.db4o" />
     <None Include="views\account\Account.haml" />
     <None Include="views\home\index.haml" />
     <None Include="views\home\_partial.haml" />
@@ -108,9 +124,6 @@
       <Project>{7A10D58A-1F92-462E-B722-034EF25AE2F3}</Project>
       <Name>Boris.BeekProject.Model</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
