--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Boris.BeekProject.Guis.Web.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Boris.BeekProject.Guis.Web.csproj
@@ -97,7 +97,8 @@
     <Reference Include="System.Web.Mobile" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="controllers\HomeController.cs" />
+    <Compile Include="Controllers\BaseBeekController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -129,7 +130,6 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App_Data\db4o\userRepository.db4o" />
     <None Include="views\account\Account.haml" />
     <None Include="views\Home\index.haml" />
     <None Include="views\Home\test.haml" />
@@ -151,6 +151,13 @@
       <Project>{7A10D58A-1F92-462E-B722-034EF25AE2F3}</Project>
       <Name>Boris.BeekProject.Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Boris.Utils.Mvc\Boris.Utils.Mvc.csproj">
+      <Project>{53B4AE97-8674-4A6D-96B5-42850DABF73D}</Project>
+      <Name>Boris.Utils.Mvc</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="App_Data\db4o\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v9.0\WebApplications\Microsoft.WebApplication.targets" />
