--- a/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Web/Web.config
@@ -24,8 +24,8 @@
   </configSections>
 
   <appSettings>
-    <add key="userRepository.path.db4" value="\App_Data\db4o\userRepository.db4o"/>
-    <add key="beekRepository.path.db4" value="\App_Data\db4o\beekRepository.db4o"/>
+    <add key="userRepository.path.db4o" value="\App_Data\db4o\userRepository.db4o"/>
+    <add key="beekRepository.path.db4o" value="\App_Data\db4o\beekRepository.db4o"/>
   </appSettings>
   
 	<connectionStrings><clear/></connectionStrings>
