--- a/Boris.BeekProject/Boris.BeekProject.Model/Boris.BeekProject.Model.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Model/Boris.BeekProject.Model.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -52,7 +53,7 @@
   <ItemGroup>
     <Compile Include="Accounts\ISetting.cs" />
     <Compile Include="Accounts\IUser.cs" />
-    <Compile Include="DataAccess\Db4o\CatalogRepository.cs" />
+    <Compile Include="DataAccess\Db4o\BeekRepository.cs" />
     <Compile Include="DataAccess\Db4o\UserRepository.cs" />
     <Compile Include="DataAccess\IUserRepository.cs" />
     <Compile Include="Accounts\User.cs" />
@@ -60,13 +61,14 @@
     <Compile Include="Beek\BluePrint.cs" />
     <Compile Include="Beek\Genre.cs" />
     <Compile Include="Beek\WritingStyle.cs" />
-    <Compile Include="DataAccess\ICatalogRepository.cs" />
+    <Compile Include="DataAccess\IBeekRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts\AnonymousRole.cs" />
     <Compile Include="Accounts\IRole.cs" />
     <Compile Include="Accounts\Role.cs" />
+    <Compile Include="Beek\IBeek.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
