--- a/Boris.Utils/Boris.Utils.Mvc/Boris.Utils.Mvc.csproj
+++ b/Boris.Utils/Boris.Utils.Mvc/Boris.Utils.Mvc.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Boris.BeekProject.Model\Boris.BeekProject.Model.csproj">
+    <ProjectReference Include="..\..\Boris.BeekProject\Boris.BeekProject.Model\Boris.BeekProject.Model.csproj">
       <Project>{7A10D58A-1F92-462E-B722-034EF25AE2F3}</Project>
       <Name>Boris.BeekProject.Model</Name>
     </ProjectReference>
