--- a/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Guis.Shared/Boris.BeekProject.Guis.Shared.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ViewModels\BaseBeekViewModel.cs" />
     <Compile Include="ViewModels\BeekViewModel.cs" />
     <Compile Include="ViewModels\ViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
