--- a/Boris.BeekProject/Boris.BeekProject.Model/Boris.BeekProject.Model.csproj
+++ b/Boris.BeekProject/Boris.BeekProject.Model/Boris.BeekProject.Model.csproj
@@ -47,30 +47,26 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accounts\ISetting.cs" />
     <Compile Include="Accounts\IUser.cs" />
     <Compile Include="DataAccess\Db4o\BeekRepository.cs" />
     <Compile Include="DataAccess\Db4o\UserRepository.cs" />
     <Compile Include="DataAccess\IUserRepository.cs" />
-    <Compile Include="Accounts\User.cs" />
-    <Compile Include="Beek\BaseBeek.cs" />
-    <Compile Include="Beek\BluePrint.cs" />
+    <Compile Include="Accounts\impl\User.cs" />
+    <Compile Include="Beek\impl\BaseBeek.cs" />
+    <Compile Include="Beek\impl\BluePrint.cs" />
     <Compile Include="Beek\Genre.cs" />
     <Compile Include="Beek\WritingStyle.cs" />
     <Compile Include="DataAccess\IBeekRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Accounts\AnonymousRole.cs" />
-    <Compile Include="Accounts\BeekSetting.cs" />
+    <Compile Include="Accounts\impl\AnonymousRole.cs" />
     <Compile Include="Accounts\IRole.cs" />
-    <Compile Include="Accounts\Role.cs" />
+    <Compile Include="Accounts\impl\Role.cs" />
     <Compile Include="Beek\IBeek.cs" />
-    <Compile Include="Beek\ShortStory.cs" />
+    <Compile Include="Beek\impl\ShortStory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
