--- a/Boris.Utils/Boris.Utils.Logging/Boris.Utils.Logging.csproj
+++ b/Boris.Utils/Boris.Utils.Logging/Boris.Utils.Logging.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{53B4AE97-8674-4A6D-96B5-42850DABF73D}</ProjectGuid>
+    <ProjectGuid>{3484159B-CFAC-44D3-A670-0DA875F44BF8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Boris.Utils.Mvc</RootNamespace>
-    <AssemblyName>Boris.Utils.Mvc</AssemblyName>
+    <RootNamespace>Boris.Utils.Logging</RootNamespace>
+    <AssemblyName>Boris.Utils.Logging</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,29 +31,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="MvcTurbine.Web, Version=2.1.0.0, Culture=neutral, PublicKeyToken=0e426322531bc5b0, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\dependencies\MvcTurbine.Web.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Abstractions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\dependencies\System.Web.Mvc.dll</HintPath>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Attributes\AuthenticateAttribute.cs" />
-    <Compile Include="Attributes\LoggingAttribute.cs" />
-    <Compile Include="Attributes\LoggingFilter.cs" />
+    <Compile Include="ILoggingService.cs" />
+    <Compile Include="NLog\NlogLoggerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Boris.BeekProject\Boris.BeekProject.Model\Boris.BeekProject.Model.csproj">
-      <Project>{7A10D58A-1F92-462E-B722-034EF25AE2F3}</Project>
-      <Name>Boris.BeekProject.Model</Name>
-    </ProjectReference>
+    <Reference Include="NLog, Version=1.0.0.505, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Boris.Utils\dependencies\NLog.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
