--- a/Boris.BeekProject/Boris.BeekProject.Model.Tests/App.config
+++ b/Boris.BeekProject/Boris.BeekProject.Model.Tests/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="userRepository.path.db4o" value="\App_Data\db4o\userRepository.db4o"/>
-    <add key="beekRepository.path.db4o" value="\App_Data\db4o\beekRepository.db4o"/>
+    <add key="userRepository.path.db4o" value="App_Data\db4o\userRepository.db4o"/>
+    <add key="beekRepository.path.db4o" value="App_Data\db4o\beekRepository.db4o"/>
   </appSettings>
 </configuration>
